Added auto save setting to program. Set default auto-save setting to auto-save. Fixed an issue where bibs stored as available for an event didn't show up if they were stored before a specific group was added. Changed some functions on MainPage interface. A few of these changes are for key binds to be added shortly. Other changes were for the auto save feature mentioned above. Along with auto-save, added the ability to 'revert' view back to original. Updated pages to add auto-save and revert features. Changed how a few of the pages saved features (all together instead of individually as was previously changed in other pages). Fixed an issue with a couple of the pages where we'd update the view once then try to do it again shortly thereafter causing an error. (Segments and AgeGroups) Removed some unused code in BibAssignment page. Started code to change how we deal with Occurrence on Segment and Division pages. Started fixing a spelling error...

--- a/EventDirector/UI/MainPages/AgeGroupsPage.xaml
+++ b/EventDirector/UI/MainPages/AgeGroupsPage.xaml
@@ -32,6 +32,7 @@
             <DockPanel LastChildFill="False" Grid.Row="2" HorizontalAlignment="Center">
                 <Button Name="Add" Content="Add Group" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click"/>
                 <Button Name="Save" Content="Save" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Update_Click"/>
+                <Button Name="ResetBtn" Content="Reset" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Revert_Click" />
             </DockPanel>
             <StackPanel Grid.Row="1" Grid.Column="1">
                 <ComboBox Name="DefaultGroupsBox" Height="35" FontSize="16" VerticalContentAlignment="Center" Margin="10,100,10,10" SelectedIndex="0" HorizontalContentAlignment="Center">
