--- a/EventDirector/UI/Timing/TimingWindow.xaml
+++ b/EventDirector/UI/Timing/TimingWindow.xaml
@@ -46,7 +46,7 @@
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Where" Width="60" DisplayMemberBinding="{Binding TimingPoint}" />
-                        <GridViewColumn Header="Occ" Width="40" DisplayMemberBinding="{Binding Occurence}" />
+                        <GridViewColumn Header="Occ" Width="40" DisplayMemberBinding="{Binding Occurrence}" />
                         <GridViewColumn Header="Bib" Width="60" DisplayMemberBinding="{Binding Bib}" />
                         <GridViewColumn Header="Name" Width="180" DisplayMemberBinding="{Binding Name}" />
                         <GridViewColumn Header="Time" Width="90" DisplayMemberBinding="{Binding Time}" />
