--- a/EventDirector/UI/Timing/TimingWindow.xaml
+++ b/EventDirector/UI/Timing/TimingWindow.xaml
@@ -29,15 +29,32 @@
                 <TextBox Name="searchBox" Width="100" Height="25" HorizontalAlignment="Left" KeyDown="SearchKeyDown"/>
                 <Button Content="Go" Width="30" Height="25" HorizontalAlignment="Left" Margin="110,0,0,0" Click="Search"/>
             </Grid>
+            <Label Content="Timing Method" FontSize="16" HorizontalContentAlignment="Center" Margin="10,5,10,0" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <ComboBox Name="TimingType" FontSize="16" Margin="10,0,5,0" Grid.Column="0" IsEnabled="false" VerticalContentAlignment="Center"/>
+                <Button Name="TimingTypeButton" Margin="5,0,10,0" Grid.Column="1" Content="Edit" VerticalContentAlignment="Center" Click="TimingTypeButton_Click"/>
+            </Grid>
             <Expander Name="extraExpander" Header="More" Margin="5,15,5,0">
-                <StackPanel>
-                    <Button Content="Print" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
-                    <Button Content="Awards" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
-                    <Button Content="Export Data" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
-                    <Button Content="Recalculate" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
-                    <Button Content="Raw Data" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
-                    <Button Content="DNS/DNF List" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
-                </StackPanel>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="0">
+                        <Button Content="Print" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
+                        <Button Content="Export Data" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
+                        <Button Content="Recalculate" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <Button Content="Awards" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
+                        <Button Content="Raw Data" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
+                        <Button Content="DNS/DNF List" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
+                    </StackPanel>
+                </Grid>
             </Expander>
         </StackPanel>
         <StackPanel Grid.Column="0">
