Removed exception throwing from AddChipRead in SQLite class. Changed Rewind in TimingSystemInterface to better reflect the methods already in RFIDInterface. Added socket setting methods to TimingSystemInterface. Changed socket set in TimingSystem to private so we can ensure we set the main socket in the interface. Updated regex for matching time in RFIDUltraInterface. Updated time function in parsemessage to deal with our updated knowledge of the time message. Epoch RFID uses is actually based on 1980 for some reason. Updated methods in RIFDUltraInterface to reflect this. TimingWindow now sets the Readers window to be expanded as default.

--- a/EventDirector/UI/Timing/TimingWindow.xaml
+++ b/EventDirector/UI/Timing/TimingWindow.xaml
@@ -58,7 +58,7 @@
             </Expander>
         </StackPanel>
         <StackPanel Grid.Column="0">
-            <Expander MaxHeight="200" Margin="5,0,5,5" HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch" Header="Readers" IsExpanded="False" ExpandDirection="Down">
+            <Expander MaxHeight="200" Margin="5,0,5,5" HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch" Header="Readers" IsExpanded="True" ExpandDirection="Down">
                 <ListBox Name="ReadersBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue">
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="ListBoxItem">
