--- a/EventDirector/UI/Timing/TimingWindow.xaml
+++ b/EventDirector/UI/Timing/TimingWindow.xaml
@@ -24,7 +24,7 @@
             </Grid>
             <Button Name="StartRace" Content="Start Race" Width="100" Height="25" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="0,8,0,0" Click="StartRaceClick" />
             <Button Content="Edit Selected" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" Click="EditSelected" IsEnabled="False"/>
-            <Button Content="Overrides" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" Click="Overrides" IsEnabled="False"/>
+            <Button Content="Manual Entry" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" Click="ManualEntry" IsEnabled="True"/>
             <Grid Height="25" HorizontalAlignment="Center" Margin="0,15,0,0">
                 <TextBox Name="searchBox" Width="100" Height="25" HorizontalAlignment="Left" KeyDown="SearchKeyDown"/>
                 <Button Content="Go" Width="30" Height="25" HorizontalAlignment="Left" Margin="110,0,0,0" Click="Search"/>
