Added setting so we can prompt (or the user can choose to never show one) when closing if a Window or the TimingController is running. Added log importing functionality. Modified CSVImporter to work better with a child class. Made ChipRead sortable. Added a few comments to ChipRead as well as a new constructor for log imports. Removed status of from ChipRead constructors other than the one the database uses. Renamed a bunch of ListBoxItem subclasses.

--- a/EventDirector/UI/MainPages/SettingsPage.xaml
+++ b/EventDirector/UI/MainPages/SettingsPage.xaml
@@ -22,7 +22,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5*"/>
-                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="245"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0">
                 <DockPanel>
@@ -49,9 +49,8 @@
                 </DockPanel>
             </StackPanel>
             <StackPanel Grid.Column="1">
-                <DockPanel Grid.Column="1">
-                    <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
-                </DockPanel>
+                <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
+                <CheckBox Name="ExitNoPrompt" Content="Never prompt before exit?" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
             </StackPanel>
         </Grid>
     </StackPanel>
