--- a/EventDirector/UI/MainWindow.xaml
+++ b/EventDirector/UI/MainWindow.xaml
@@ -8,20 +8,24 @@
         Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="140" />
+            <ColumnDefinition Width="180" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <StackPanel Name="leftSide" Grid.Column="0">
-            <Button x:Name="dashboardButton" Content="Dashboard" HorizontalAlignment="Center" Margin="0,10,0,10" Width="120" Click="DashboardButton_Click" AutomationProperties.HelpText="Display Dashboard" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="participantsButton" Content="Participants" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="ParticipantsButton_Click" AutomationProperties.HelpText="Display Participants" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="bibsButton" Content="Bibs" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="BibsButton_Click" AutomationProperties.HelpText="Display Bibs" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="chipsButton" Content="Chips" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="ChipsButton_Click" AutomationProperties.HelpText="Display Chips" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button IsEnabled="false" x:Name="reportsButton" Content="Reports" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="ReportsButton_Click" AutomationProperties.HelpText="Display Reports" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="locationsButton" Content="Locations" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="LocationsButton_Click" AutomationProperties.HelpText="Display Locations" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="divisionsButton" Content="Divisions" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="DivisionsButton_Click" AutomationProperties.HelpText="Display Divisions" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="segmentsButton" Content="Segments" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="SegmentsButton_Click" AutomationProperties.HelpText="Display Segments" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="agegroupsButton" Content="Age Groups" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="AgegroupsButton_Click" AutomationProperties.HelpText="Display Age Groups" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="settingsButton" Content="Settings" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="SettingsButton_Click" AutomationProperties.HelpText="Display Settings" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="dashboardButton" Content="Dashboard" HorizontalAlignment="Center" Margin="0,10,0,10" Width="160" Click="DashboardButton_Click" AutomationProperties.HelpText="Display Dashboard" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="timingButton" Content="Timing" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="TimingButton_Click" AutomationProperties.HelpText="Display Timing" FontSize="16" VerticalContentAlignment="Center" Height="35" />
+            <StackPanel Name="timingChildren" HorizontalAlignment="Center" Margin="10,0,0,0" Visibility="Collapsed">
+                <Button Name="announcer" Content="Announcer Window" HorizontalAlignment="Center" Margin="0,0,0,10" Width="150" Click="ManualEntry_Click" AutomationProperties.HelpText="Manual Entry" FontSize="12" VerticalContentAlignment="Center" Height="35" IsEnabled="False"/>
+            </StackPanel>
+            <Button x:Name="participantsButton" Content="Participants" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="ParticipantsButton_Click" AutomationProperties.HelpText="Display Participants" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="bibsButton" Content="Bibs" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="BibsButton_Click" AutomationProperties.HelpText="Display Bibs" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="chipsButton" Content="Chips" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="ChipsButton_Click" AutomationProperties.HelpText="Display Chips" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button IsEnabled="false" x:Name="reportsButton" Content="Reports" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="ReportsButton_Click" AutomationProperties.HelpText="Display Reports" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="locationsButton" Content="Locations" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="LocationsButton_Click" AutomationProperties.HelpText="Display Locations" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="divisionsButton" Content="Divisions" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="DivisionsButton_Click" AutomationProperties.HelpText="Display Divisions" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="segmentsButton" Content="Segments" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="SegmentsButton_Click" AutomationProperties.HelpText="Display Segments" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="agegroupsButton" Content="Age Groups" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="AgegroupsButton_Click" AutomationProperties.HelpText="Display Age Groups" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="settingsButton" Content="Settings" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="SettingsButton_Click" AutomationProperties.HelpText="Display Settings" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
         </StackPanel>
         <Frame x:Name="TheFrame" Grid.Column="1" NavigationUIVisibility="Hidden" />
     </Grid>
