--- a/EventDirector/UI/Timing/TimingRawReadsPage.xaml
+++ b/EventDirector/UI/Timing/TimingRawReadsPage.xaml
@@ -1,24 +1,25 @@
-﻿<Window x:Class="EventDirector.RawReadsWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EventDirector"
-        mc:Ignorable="d"
-        Title="Raw Reads" Height="450" Width="850" MinWidth="850" MinHeight="450" Closing="Window_Closing">
+﻿<Page x:Class="EventDirector.UI.Timing.TimingRawReadsPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:EventDirector.UI.Timing"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="TimingRawReadsPage">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="45" />
         </Grid.RowDefinitions>
-        <ListView x:Name="updateListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" Grid.Row="0" FontSize="12">
+        <ListView x:Name="updateListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Extended" Grid.Row="0" FontSize="12" Loaded="UpdateListView_Loaded">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Box" Width="40" DisplayMemberBinding="{Binding Box}" />
-                    <GridViewColumn Header="Where" Width="80" DisplayMemberBinding="{Binding LocationName}" />
+                    <GridViewColumn Header="Location" Width="80" DisplayMemberBinding="{Binding LocationName}" />
                     <GridViewColumn Header="Chip" Width="80" DisplayMemberBinding="{Binding ChipNumber}" />
                     <GridViewColumn Header="Bib" Width="60" DisplayMemberBinding="{Binding Bib}" />
-                    <GridViewColumn Header="Name" Width="160" DisplayMemberBinding="{Binding Name}" />
+                    <GridViewColumn Header="Name" Width="140" DisplayMemberBinding="{Binding Name}" />
                     <GridViewColumn Header="Clock" Width="160" DisplayMemberBinding="{Binding TimeString}" />
                     <GridViewColumn Header="Net Time" Width="100" DisplayMemberBinding="{Binding NetTime}" />
                     <GridViewColumn Header="Status" Width="60" DisplayMemberBinding="{Binding StatusName}" />
@@ -35,4 +36,4 @@
             <Button HorizontalAlignment="Left" Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="150" Margin="5,5,5,5" Grid.Column="1" Click="DoneButton_Click"/>
         </Grid>
     </Grid>
-</Window>
+</Page>
